# femrd

./: .gitignore  CMakeLists.txt  README.md  build.sh  condition
fem/: CMakeLists.txt  fem.h
fem/base/: CMakeLists.txt  mesh.cpp  mesh.h  model.cpp  model.h  solver.cpp  solver.h
fem/elements/: CMakeLists.txt  element.h  linline.cpp  linline.h  lintet.cpp  lintet.h  lintri.cpp  lintri.h  nullelem.h
fem/logger/: CMakeLists.txt  logger.h
fem/math/: CMakeLists.txt  vm.h  vm_impl.h
meshes/: circle.mphtxt
tests/: CMakeLists.txt
tests/mesh/: CMakeLists.txt  test_element.cpp  test_mesh.cpp
